libs/extractor/src/snapshots/extractor__tests__apply_var_typography-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr#\"import {Box as DevupButton} from '@devup-ui/core'\n        <DevupButton\n      boxSizing=\"border-box\"\n      className={className}\n      typography={typography}\n    >\n    </DevupButton>\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "box-sizing",
                value: "border-box",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupValue0, __devupValue1) => <div className={`${__devupValue0 || \"\"} a ${((__devupTypography) => __devupTypography ? `typo-${__devupTypography}` : \"\")(__devupValue1)}`}>\n    </div>)(className, typography);\n",
}
