libs/extractor/src/snapshots/extractor__tests__apply_var_typography.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import {Text} from '@devup-ui/core'\n        <Text typography={variable} />\n        \",\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {},
    code: "<span className={((__devupTypography) => __devupTypography ? `typo-${__devupTypography}` : \"\")(variable)} />;\n",
}
