libs/extractor/src/snapshots/extractor__tests__emotion_class_names_keeps_calls_as_classes.snap
---
source: libs/extractor/src/lib.rs
expression: outputs
---
[
    "ToBTreeSet { styles: {}, code: \"export const App = () => <a className={getClass()} />;\\n\" }",
    "ToBTreeSet { styles: {Static(ExtractStaticStyle { property: \"color\", value: \"blue\", level: 0, selector: None, style_order: None, layer: None })}, code: \"import \\\"@devup-ui/react/devup-ui.css\\\";\\nexport const App = ({ on }) => <a className={`a ${on ? getClass() : \\\"\\\"}`} />;\\n\" }",
    "ToBTreeSet { styles: {}, code: \"export const App = ({ o }) => <a className={`x ${o.getClass()} ${make(1)}`} />;\\n\" }",
]
